--- a/react-frontend/package.json
+++ b/react-frontend/package.json
@@ -12,7 +12,9 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.3"
+    "react-scripts": "^4.0.0",
+    "sequelize": "^6.3.5",
+    "sequelize-cockroachdb": "^1.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
