--- a/react-frontend/package.json
+++ b/react-frontend/package.json
@@ -1,7 +1,8 @@
 {
   "name": "react-frontend",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
+  "proxy": "https://api.cloudinary.com",
   "dependencies": {
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
