--- a/react-frontend/package.json
+++ b/react-frontend/package.json
@@ -11,12 +11,13 @@
     "axios": "^0.20.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-grid-layout": "^1.1.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3"
   },
   "scripts": {
     "start": "react-scripts start",
-    "start-all": "(cd ../flaskr && flask run) & react-scripts start",
+    "start-all": "(cd ../flaskr && flask run)& react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
