--- a/react-frontend/package.json
+++ b/react-frontend/package.json
@@ -14,6 +14,8 @@
     "react-bootstrap": "^1.4.0",
     "react-dom": "^16.13.1",
     "react-grid-layout": "^1.1.1",
+    "react-masonry-css": "^1.0.14",
+    "react-popup": "^0.10.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.0"
   },
