--- a/react-frontend/package.json
+++ b/react-frontend/package.json
@@ -17,7 +17,8 @@
     "react-masonry-css": "^1.0.14",
     "react-popup": "^0.10.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "^4.0.0"
+    "react-scripts": "^4.0.0",
+    "uuid": "^8.3.1"
   },
   "scripts": {
     "start": "node_modules/.bin/react-scripts start",
